<resources>
    <!-- 共通-->
    <string name="tv_todo">TODO</string>
    <string name="tv_register">登録</string>
    <string name="tv_update">更新</string>
    <string name="tv_cancel">キャンセル</string>
    <string name="tv_error">エラー</string>
    <string name="tv_close">閉じる</string>
    <string name="tv_logout">ログアウト</string>
    <string name="tv_todoRegister">TODO登録</string>
    <string name="tv_todoUserCheck">ユーザー情報確認</string>
    <string name="tv_check">確認</string>
    <string name="tv_finish">完了</string>
    <string name="tv_delete">削除</string>
    <string name="tv_logoutCheck">ログアウトしますか？</string>
    <string name="tv_logoutResult">ログアウトしました</string>
    <string name="tv_deleteCheck">削除しますか？</string>
    <string name="tv_finishedCheck">TODOを完了しますか？</string>
    <string name="tv_finishedResult">TODOを完了しました</string>
    <string name="tv_deleteResult">TODOを削除しました</string>
    <string name="tv_backTodoListMenu">TODOリスト画面に戻る</string>
    <string name="tv_backSearchTodoListMenu">TODO検索結果画面に戻る</string>
    <!-- ログイン画面-->
    <string name="app_name">TODO</string>
    <string name="tv_userId">ユーザーID：</string>
    <string name="tv_userName">ユーザー名：</string>
    <string name="tv_password">パスワード：</string>
    <string name="tv_login">ログイン</string>
    <string name="tv_userRegister">新規登録</string>
    <!-- ユーザー登録画面-->
    <string name="tv_formUserId">ユーザーIDを入力してください</string>
    <string name="tv_formUserName">ユーザー名を入力してください</string>
    <string name="tv_formPassword">パスワードを入力してください</string>
    <string name="tv_formCheckPassword">確認のためもう一度パスワードを入力してください</string>
    <string name="tv_userRegisterResultTitle">ユーザー登録完了</string>
    <string name="tv_userRegisterResult">新規ユーザーの登録が完了しました</string>
    <string name="tv_backLoginMenu">ログイン画面に戻る</string>
    <!-- TODOリスト画面-->
    <string name="tv_welcomeUser">ようこそ %1$s さん</string>
    <string name="tv_searchCancel">検索解除</string>
    <string name="tv_workName">項目名</string>
    <string name="tv_workUserName">担当者</string>
    <string name="tv_expireDate">期限日</string>
    <string name="tv_finishedDate">完了日</string>
    <string name="tv_todoSearch">検索</string>
    <!-- TODO登録画面-->
    <string name="tv_selectDate">日付選択</string>
    <string name="tv_deleteDate">日付取消</string>
    <string name="tv_todoRegisterResultTitle">TODO登録完了</string>
    <string name="tv_todoRegisterResult">TODOの登録が完了しました</string>
    <!-- TODO更新画面-->
    <string name="tv_todoUpdateResultTitle">TODO更新完了</string>
    <string name="tv_todoUpdateResult">TODOの更新が完了しました</string>
    <string name="tv_backTodoInformation">TODO詳細情報画面に戻る</string>
    <!-- TODO検索画面-->
    <string name="tv_search">検索</string>
    <string name="tv_until">以前</string>
    <string name="tv_since">以降</string>
    <!-- ユーザー情報画面-->
    <string name="tv_change">変更</string>
    <string name="tv_passwordShow">パスワード表示</string>
    <string name="tv_userUpdateTransition">ユーザー更新画面へ移動</string>
    <string name="tv_inputPassword">パスワード入力</string>
    <string name="tv_karipassword">********</string>
    <!-- ユーザー更新画面-->
    <string name="tv_userIdView">ユーザーID　※変更不可</string>
    <string name="tv_userUpdateResultTitle">ユーザー更新完了</string>
    <string name="tv_userUpdateResult">新規ユーザーの更新が完了しました</string>
    <string name="tv_backUserInformationMenu">ユーザー情報画面に戻る</string>
    <!-- 進捗リスト画面-->
    <string name="tv_underWayNumber">No.</string>
    <string name="tv_underWayTitle">題名</string>
    <string name="tv_underWayUpdate">更新日</string>
    <string name="tv_underWayRegister">進捗報告</string>
    <string name="tv_underWay">進捗内容</string>
    <string name="tv_underWayDeleteResult">進捗報告を削除しました</string>
    <!-- 進捗登録画面-->
    <string name="tv_todoUnderWayRegisterResultTitle">進捗登録完了</string>
    <string name="tv_todoUnderWayRegisterResult">進捗の登録が完了しました</string>
    <string name="tv_backTodoUnderWayListMenu">進捗報告リスト画面に戻る</string>
    <!-- 進捗更新画面-->
    <string name="tv_todoUnderWayUpdateResultTitle">進捗更新完了</string>
    <string name="tv_todoUnderWayUpdateResult">進捗の更新が完了しました</string>
    <string name="tv_backTodoUnderWayInformationMenu">進捗報告内容画面に戻る</string>
</resources>
