<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="#00BFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_workName"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvWorkNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:textSize="25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_workUserName"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvUserNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_expireDate"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/tvExpireDateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_finishedDate"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/tvFinishedDateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:textSize="25sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/tvTodoUpdateExecute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_update"
                android:textSize="25sp" />
            <Button
                android:id="@+id/tvTodoFinishedExecute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_finish"
                android:textSize="25sp" />
            <Button
                android:id="@+id/tvTodoDeleteExecute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_delete"
                android:textSize="25sp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/tvTodoUnderWayExecute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_underWay"
                android:textSize="25sp" />
            <Button
                android:id="@+id/tvTodoInformationClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_close"
                android:textSize="25sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>