<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="#00BFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_userId"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvUserIdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:textSize="25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_userName"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvUserNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/tv_password"
            android:textSize="25sp" />
        <Button
            android:id="@+id/tvShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_passwordShow"
            android:textSize="25sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvPasswordView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:inputType="textPassword"
        android:textSize="25sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/tvUserUpdateExecute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_change"
            android:textSize="25sp" />
        <Button
            android:id="@+id/tvUserInformationClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_close"
            android:textSize="25sp" />

    </LinearLayout>
</LinearLayout>