<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="#00BFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_underWayTitle"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvUnderWayTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:textSize="25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_underWay"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvUnderWayView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:textSize="25sp"
        android:inputType="textMultiLine"
        android:lines="8"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/tvTodoUnderWayUpdateExecute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_update"
            android:textSize="25sp" />
        <Button
            android:id="@+id/tvTodoUnderWayDeleteExecute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_delete"
            android:textSize="25sp" />
        <Button
            android:id="@+id/tvTodoUnderWayInformationClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_close"
            android:textSize="25sp" />

    </LinearLayout>
</LinearLayout>