<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvWelcomeUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="right"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/tvTodoListUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="25sp"
            android:text="@string/tv_update"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">
            <Button
                android:id="@+id/tvTodoSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="25sp"
                android:text="@string/tv_search"/>
            <Button
                android:id="@+id/tvTodoSearchCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="25sp"
                android:text="@string/tv_searchCancel"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:padding="2dp"
            android:background ="#a9a9a9"
            android:text="@string/tv_workName"/>

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:padding="2dp"
            android:background ="#a9a9a9"
            android:text="@string/tv_workUserName"/>

        <TextView
            android:id="@+id/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:padding="2dp"
            android:background ="#a9a9a9"
            android:text="@string/tv_expireDate"/>

        <TextView
            android:id="@+id/title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:padding="2dp"
            android:background ="#a9a9a9"
            android:text="@string/tv_finishedDate"/>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tvTodoList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>