<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="#00BFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_underWayTitle"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/tvUnderWayTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:inputType="text"
        android:textSize="25sp"
        android:maxLength="30"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_underWayRegister"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/tvUnderWayInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:textSize="25sp"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLength="500" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/tvTodoUnderWayRegisterExecute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_register"
            android:textSize="25sp" />
        <Button
            android:id="@+id/tvTodoUnderWayRegisterCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_cancel"
            android:textSize="25sp" />

    </LinearLayout>


</LinearLayout>